--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,900;1,700&display=swap");
+/**
+*
+* Testing
+*
+**/
 *,
 html, body {
   -webkit-box-sizing: border-box;
@@ -16,6 +21,125 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
   font-family: 'Nunito', sans-serif;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.body {
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+
+.show-menu {
+  background-color: #f6b52e;
+  overflow: hidden;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.body-style {
+  -webkit-transform: translateY(7%) translateX(1%) rotateZ(21deg);
+          transform: translateY(7%) translateX(1%) rotateZ(21deg);
+  overflow: hidden;
+  background-color: #fff;
+  -webkit-filter: blur(2px);
+          filter: blur(2px);
+}
+
+@media (min-width: 361px) and (max-width: 869px) {
+  .body-style {
+    -webkit-transform: translateY(7%) translateX(1%) rotateZ(21deg);
+            transform: translateY(7%) translateX(1%) rotateZ(21deg);
+  }
+}
+
+@media (min-width: 361px) and (max-width: 869px) {
+  .body-style {
+    -webkit-transform: translateY(11%) translateX(8%) rotateZ(24deg);
+            transform: translateY(11%) translateX(8%) rotateZ(24deg);
+  }
+}
+
+.show {
+  display: -webkit-box !important;
+  display: -ms-flexbox !important;
+  display: flex !important;
+}
+
+.close-btn {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: fixed;
+  top: 3%;
+  left: 2%;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.close-btn .bar {
+  display: block;
+  border: 3px solid #000;
+  border-radius: 60px;
+  background-color: #000;
+  width: 35px;
+  margin: 0.2rem 0;
+}
+
+.close-btn .bar1 {
+  -webkit-transform: rotateZ(45deg);
+          transform: rotateZ(45deg);
+}
+
+.close-btn .bar2 {
+  -webkit-transform: rotateZ(-45deg) translateY(-9px) translateX(8px);
+          transform: rotateZ(-45deg) translateY(-9px) translateX(8px);
+}
+
+.close-btn .bar3 {
+  display: none;
+  -webkit-transform: rotateZ(20deg);
+          transform: rotateZ(20deg);
+}
+
+.mobile-menu {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: fixed;
+  top: 7%;
+  left: 1%;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+
+.mobile-menu .mobile-menu-item {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  list-style: none;
+  margin: 2rem 0;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+}
+
+.mobile-menu .mobile-menu-item:hover {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+
+.mobile-menu .mobile-menu-item a {
+  margin: 1rem 0;
+  padding: 1rem 0.5rem;
+  text-decoration: none;
+  color: #000;
+  font-size: 20px;
+  font-weight: 700;
 }
 
 main {
@@ -55,6 +179,9 @@ header {
 }
 
 .navigation .logo {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   padding: 0.5rem 1rem;
 }
 
@@ -62,7 +189,92 @@ header {
   color: #f6b52e;
   font-style: italic;
   font-size: 25px;
-  text-shadow: 1px 1px 10px #ffc654;
+  -webkit-animation: blink 20s 10s infinite normal;
+          animation: blink 20s 10s infinite normal;
+}
+
+@media (max-width: 359px) {
+  .navigation .logo p {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  .navigation .logo p {
+    font-size: 22px;
+  }
+}
+
+.navigation .menu-btn {
+  display: none;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  top: 3%;
+  left: 2%;
+  cursor: pointer;
+  padding: 0.5rem;
+  margin: 0 1rem;
+}
+
+.navigation .menu-btn:hover .bar1 {
+  -webkit-transform: rotateZ(38deg) translateX(16px) translateY(-5px);
+          transform: rotateZ(38deg) translateX(16px) translateY(-5px);
+  width: 20px;
+}
+
+.navigation .menu-btn:hover .bar3 {
+  -webkit-transform: rotateZ(-39deg) translateX(15px) translateY(5px);
+          transform: rotateZ(-39deg) translateX(15px) translateY(5px);
+  width: 20px;
+}
+
+@media (max-width: 359px) {
+  .navigation .menu-btn {
+    display: block;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  .navigation .menu-btn {
+    display: block;
+  }
+}
+
+.navigation .menu-btn .bar {
+  display: block;
+  border: 2.5px solid #fff;
+  border-radius: 60px;
+  background-color: #fff;
+  width: 35px;
+  margin: 0.4rem 0;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+@-webkit-keyframes blink {
+  0% {
+    text-shadow: none;
+  }
+  50% {
+    text-shadow: 1px 1px 10px #ffc654;
+  }
+  100% {
+    text-shadow: none;
+  }
+}
+
+@keyframes blink {
+  0% {
+    text-shadow: none;
+  }
+  50% {
+    text-shadow: 1px 1px 10px #ffc654;
+  }
+  100% {
+    text-shadow: none;
+  }
 }
 
 .desktop-menu {
@@ -80,6 +292,18 @@ header {
   -ms-flex-item-align: center;
       align-self: center;
   padding: 0 0.5rem;
+}
+
+@media (max-width: 359px) {
+  .desktop-menu {
+    display: none;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  .desktop-menu {
+    display: none;
+  }
 }
 
 .desktop-menu .desktop-menu-item {
@@ -109,10 +333,6 @@ header {
   cursor: pointer;
 }
 
-.mobile-menu {
-  display: none;
-}
-
 .hero {
   padding: 5rem 3rem;
 }
@@ -122,7 +342,26 @@ header {
   text-align: center;
 }
 
+@media (max-width: 359px) {
+  .hero .hero-text {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  .hero .hero-text {
+    font-size: 22px;
+  }
+}
+
 .homepage {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 1rem;
 }
 
@@ -142,26 +381,68 @@ header {
 }
 
 .new-stuff-list ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   list-style: none;
 }
 
 .new-stuff-list .new-stuff {
-  width: -webkit-max-content;
-  width: -moz-max-content;
-  width: max-content;
+  width: auto;
+  max-width: 800px;
   padding: 1rem 0;
+  margin: 1rem 0;
   border-bottom: 1.3px solid #ffc654;
+}
+
+.new-stuff-list .new-stuff-details {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
+  max-width: 800px;
 }
 
 .new-stuff-list .new-stuff-details .title {
   font-size: 22px;
 }
 
+@media (max-width: 359px) {
+  .new-stuff-list .new-stuff-details .title {
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  .new-stuff-list .new-stuff-details .title {
+    font-size: 20px;
+  }
+}
+
 .new-stuff-list .new-stuff-details .description {
   width: 100%;
-  max-width: 800px;
   margin: 0.8rem;
   font-size: 18px;
+}
+
+@media (max-width: 359px) {
+  .new-stuff-list .new-stuff-details .description {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  .new-stuff-list .new-stuff-details .description {
+    font-size: 17px;
+  }
 }
 
 .new-stuff-list .new-stuff-details a {
@@ -174,6 +455,21 @@ header {
   -webkit-transition: .2s all ease;
   transition: .2s all ease;
   padding: 0.2rem;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+@media (max-width: 359px) {
+  .new-stuff-list .new-stuff-details a {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  .new-stuff-list .new-stuff-details a {
+    font-size: 16px;
+  }
 }
 
 .new-stuff-list .new-stuff-details a:hover {
@@ -185,6 +481,18 @@ header {
   padding: 2rem 1rem;
 }
 
+@media (max-width: 359px) {
+  .playlists_page {
+    padding: 2rem 0.4rem;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 549px) {
+  .playlists_page {
+    padding: 2rem 0.6rem;
+  }
+}
+
 .playlists_page .playlists_page-title {
   width: 100%;
   max-width: 300px;
@@ -193,8 +501,21 @@ header {
   text-shadow: -4px -3px 0 #000;
 }
 
+@media (max-width: 359px) {
+  .playlists_page .playlists_page-title {
+    font-size: 26px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 549px) {
+  .playlists_page .playlists_page-title {
+    font-size: 35px;
+  }
+}
+
 .apple-music-playlists {
-  padding: 0.5rem;
+  padding: 1rem 0.5rem;
+  margin: 1rem 0;
 }
 
 .apple-music-playlists ul {
@@ -203,6 +524,26 @@ header {
   -ms-grid-columns: (minmax(300px, 1.5fr))[auto-fit];
       grid-template-columns: repeat(auto-fit, minmax(300px, 1.5fr));
   list-style: none;
+}
+
+@media (max-width: 359px) {
+  .apple-music-playlists ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 549px) {
+  .apple-music-playlists ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .playlist {
@@ -217,13 +558,39 @@ header {
   margin: 1rem;
 }
 
+@media (max-width: 359px) {
+  .playlist {
+    padding: 1rem 0.3rem;
+    margin: 0.3rem;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 549px) {
+  .playlist {
+    padding: 1rem 0.7rem;
+    margin: 0.5rem;
+  }
+}
+
 .playlist .play-btn img {
   max-width: 50px;
+}
+
+@media (max-width: 359px) {
+  .playlist .play-btn img {
+    max-width: 40px;
+  }
 }
 
 .playlist .playlist-details {
   padding: 0 0.4rem;
   margin: auto 0.2rem;
+}
+
+@media (max-width: 359px) {
+  .playlist .playlist-details .playlist-name {
+    font-size: 17px;
+  }
 }
 
 .playlist .playlist-details .playist-owner a {
@@ -241,6 +608,18 @@ header {
   margin: 2rem 1rem;
 }
 
+@media (max-width: 359px) {
+  .team_page .team_page-title {
+    font-size: 25px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  .team_page .team_page-title {
+    font-size: 30px;
+  }
+}
+
 .team {
   display: -ms-grid;
   display: grid;
@@ -248,6 +627,26 @@ header {
       grid-template-columns: repeat(auto-fit, minmax(400px, 1.5fr));
   grid-gap: 2rem;
   margin: 2rem 0;
+}
+
+@media (max-width: 359px) {
+  .team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 549px) {
+  .team {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
 }
 
 .team .team-member {
@@ -264,12 +663,44 @@ header {
   margin: 1.5rem;
 }
 
+@media (max-width: 359px) {
+  .team .team-member {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 1rem 0.2rem;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 549px) {
+  .team .team-member {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 1rem;
+  }
+}
+
 .team .member-icon {
   padding: 0.5rem;
 }
 
 .team .member-icon img {
   max-width: 130px;
+}
+
+@media (max-width: 359px) {
+  .team .member-icon img {
+    max-width: 100px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 549px) {
+  .team .member-icon img {
+    max-width: 100px;
+  }
 }
 
 .team .team-member-details {
@@ -320,10 +751,34 @@ header {
   margin: 2rem auto;
 }
 
+@media (max-width: 359px) {
+  .shows-page h2 {
+    font-size: 30px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  .shows-page h2 {
+    font-size: 35px;
+  }
+}
+
 .episodes-list p {
   margin: auto;
   text-align: center;
   font-size: 20px;
+}
+
+@media (max-width: 359px) {
+  .episodes-list p {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 361px) and (max-width: 767px) {
+  .episodes-list p {
+    font-size: 17px;
+  }
 }
 
 footer {
