--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,10 @@ body {
 }
 
 .body {
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
+  -webkit-transform: translateZ(0);
+          transform: translateZ(0);
 }
 
 .show-menu {
@@ -35,11 +37,12 @@ body {
   overflow: hidden;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
+  max-height: 100vh;
 }
 
 .body-style {
-  -webkit-transform: translateY(7%) translateX(1%) rotateZ(21deg);
-          transform: translateY(7%) translateX(1%) rotateZ(21deg);
+  -webkit-transform: translateY(7%) translateZ(0) translateX(1%) rotateZ(21deg);
+          transform: translateY(7%) translateZ(0) translateX(1%) rotateZ(21deg);
   overflow: hidden;
   background-color: #fff;
   -webkit-filter: blur(2px);
