--- a/css/style.css
+++ b/css/style.css
@@ -35,9 +35,9 @@ body {
 .show-menu {
   background-color: #f6b52e;
   overflow: hidden;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-  max-height: 100vh;
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+  max-height: 600px;
 }
 
 .body-style {
@@ -117,8 +117,8 @@ body {
   position: fixed;
   top: 7%;
   left: 1%;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
+  -webkit-transition: all 0.15s;
+  transition: all 0.15s;
 }
 
 .mobile-menu .mobile-menu-item {
