--- a/css/style.scss
+++ b/css/style.scss
@@ -25,8 +25,8 @@ body{
 .show-menu{
     background-color:#f6b52e;
     overflow: hidden;
-    transition: all 0.2s;
-    max-height: 100vh;
+    transition: all 0.1s;
+    max-height: 600px;
 }
 
 
@@ -94,7 +94,7 @@ body{
     position: fixed;
     top: 7%;
     left: 1%;
-    transition: all 0.2s;
+    transition: all 0.15s;
 
     
 
