--- a/css/style.scss
+++ b/css/style.scss
@@ -277,7 +277,7 @@ header{
     padding: 5rem 3rem;
 
     .hero-text{
-        font-size: 30px;
+        font-size: 28px;
         text-align: center;
 
         @include media( "<phone" ) {
@@ -413,7 +413,8 @@ header{
     }
 }
 
-.apple-music-playlists{
+.apple-music-playlists,
+.spotify-music-playlists{
     padding: 1rem 0.5rem;
     margin: 1rem 0;
 
