--- a/css/team-styles.css
+++ b/css/team-styles.css
@@ -1,48 +1,1 @@
-.body-style {
-  -webkit-transform: translateY(1%) translateX(-61%) rotateZ(21deg);
-          transform: translateY(1%) translateX(-61%) rotateZ(21deg);
-  overflow: hidden;
-  background-color: #fff;
-  -webkit-filter: blur(2px);
-          filter: blur(2px);
-}
-
-/**
-*
-* Testing
-*
-**/
-.body-style {
-  -webkit-transform: unset;
-          transform: unset;
-}
-
-.body-style {
-  -webkit-transform: translateY(7%) translateX(19%) rotateZ(21deg);
-          transform: translateY(7%) translateX(19%) rotateZ(21deg);
-  overflow: hidden;
-  background-color: #fff;
-  -webkit-filter: blur(2px);
-          filter: blur(2px);
-}
-
-@media (min-width: 361px) {
-  .body-style {
-    -webkit-transform: translateY(-10%) translateX(-60%) rotateZ(12deg);
-            transform: translateY(-10%) translateX(-60%) rotateZ(12deg);
-  }
-}
-
-@media (min-width: 361px) and (max-width: 767px) {
-  .body-style {
-    -webkit-transform: translateY(0%) translateX(-20%) rotateZ(18deg);
-            transform: translateY(0%) translateX(-20%) rotateZ(18deg);
-  }
-}
-
-@media (min-width: 769px) and (max-width: 869px) {
-  .body-style {
-    -webkit-transform: translateY(4%) translateX(-1%) rotateZ(21deg);
-            transform: translateY(4%) translateX(-1%) rotateZ(21deg);
-  }
-}
+/* No CSS */
