--- a/css/style.css
+++ b/css/style.css
@@ -833,22 +833,54 @@ header {
   }
 }
 
-.episodes-list p {
+.shows-page .other-videos-btn {
   margin: auto;
   text-align: center;
   font-size: 20px;
 }
 
 @media (max-width: 359px) {
-  .episodes-list p {
-    font-size: 15px;
+  .shows-page .other-videos-btn {
+    font-size: 16px;
   }
 }
 
 @media (min-width: 361px) and (max-width: 767px) {
-  .episodes-list p {
-    font-size: 17px;
+  .shows-page .other-videos-btn {
+    font-size: 18px;
   }
+}
+
+.shows-page .other-videos-btn a {
+  color: #f6b52e;
+  text-decoration: none;
+  -webkit-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.shows-page .other-videos-btn a:hover {
+  color: #d49a27;
+}
+
+.episodes-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 0.6rem;
+}
+
+.episodes-list .episode {
+  margin: 0.7rem;
+}
+
+.episodes-list .episode iframe {
+  max-width: 500px;
 }
 
 footer {
