--- a/css/style.scss
+++ b/css/style.scss
@@ -669,21 +669,47 @@ header{
            font-size: 35px;
         }
     }
-}
 
-.episodes-list{
-    p{
+    .other-videos-btn{
         margin: auto;
         text-align: center;
         font-size: 20px;
 
         @include media( "<phone" ) {
-            font-size: 15px;
+            font-size: 16px;
         }
     
         @include media( ">phone" , "<tablet" ) {
-           font-size: 17px;
+           font-size: 18px;
         }
+
+        a{
+            color: #f6b52e;
+            text-decoration: none;
+            transition: 0.2s;
+            
+
+            &:hover{
+                color: #d49a27;
+            }
+        }
+        
+    }
+}
+
+.episodes-list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0.6rem;
+
+    .episode{
+        margin: 0.7rem;
+
+        iframe{
+            max-width: 500px;
+        }
+        
     }
     
 }
